# docker-fastapi-vilt-b32

./: Dockerfile  README.md  main.py  model_hf.py  pyproject.toml
